[metadata]
name = keystoneauth-oidc-refreshtoken
summary = OpenID Connect Access Token Procurement Through Refresh Token for OpenStack client
description-file =
  README.md
author = José Joaquín Escobar Gómez
author-email = alu0100837094@ull.edu.es
home-page = https://github.com/quinoescobar/keystoneauth-oidc-refreshtoken
classifiers =
  Environment :: Console
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages =
  keystoneauth_oidc_refreshtoken

[entry_points]
keystoneauth1.plugin =
  v3oidcrefreshtoken = keystoneauth_oidc_refreshtoken.loading:OpenIDConnectRefreshToken
